[project]
name = "python-driver-docs"
version = "0.1.0"
description = "ScyllaDB Python Driver Docs"
authors = [{ name = "ScyllaDB" }]
package-mode = false
requires-python = ">=3.13,<3.14"

dependencies = [
  "eventlet>=0.40.3,<1.0.0",
  "gevent>=25.9.1,<26.0.0",
  "gremlinpython==3.7.4",
  "pygments>=2.19.2,<3.0.0",
  "recommonmark==0.7.1",
  "redirects_cli~=0.1.3",
  "sphinx-autobuild>=2025.0.0,<2026.0.0",
  "sphinx-sitemap>=2.8.0,<3.0.0",
  "sphinx-scylladb-theme>=1.8.2,<2.0.0",
  "sphinx-multiversion-scylla>=0.3.2,<1.0.0",
  "sphinx>=8.2.3,<9.0.0",
  "scales>=1.0.9,<2.0.0",
  "six>=1.9",
  "tornado>=6.5,<7.0",
]

[dependency-groups]
# Add any dev-only tools here; example shown
dev = ["hatchling==1.27.0"]

[tool.uv.sources]
# Keep the driver editable from the parent directory
scylla-driver = { path = "../", editable = true }

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

# We don't ship a Python package/module; just include the docs tree as data.
# Using 'include' avoids the "Unable to determine which files to ship" error.
include = [
  "**/*.rst",
  "**/*.md",
  "**/*.txt",
  "**/*.py",        # e.g., conf.py and any Sphinx helpers
  "**/*.yml",
  "**/*.yaml",
  "**/*.json",
  "**/*.css",
  "**/*.js",
  "**/*.html",
  "_static/**",
  "_templates/**",
]

exclude = [
  "**/__pycache__/**",
  "**/*.pyc",
  ".venv/**",
]